data project updated, navbar background added, logo updated

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,18 +8,13 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
+      "src": "logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#F98226",
-  "background_color": "#F98226"
+  "theme_color": "#161c24",
+  "background_color": "#161c24"
 }
